add_library(inp ifeval.c    inp2g.c  inp2q.c  inpaname.c  inpeval.c   inplist.c   inpsymt.c
ifnewuid.c  inp2h.c  inp2r.c  inpapnam.c  inpfindl.c  inplkmod.c  inptyplk.c
inp2b.c     inp2i.c  inp2s.c  inpcfix.c   inpgmod.c   inpmkmod.c  ptfuncs.c
inp2c.c     inp2j.c  inp2t.c  inpdomod.c  inpgstr.c   inpmktmp.c  sperror.c
inp2d.c     inp2k.c  inp2u.c  inpdoopt.c  inpgtitl.c  inppas1.c
inp2dot.c   inp2l.c  inp2v.c  inpdpar.c   inpgtok.c   inppas2.c
inp2e.c     inp2m.c  inp2w.c  inperrc.c   inpgval.c   inppname.c
inp2f.c     inp2o.c  inp2z.c  inperror.c  inpkmods.c  inpptree.c)
