add_library(bjt bjt.c      bjtdel.c    bjtgetic.c  bjtmpar.c   bjtsacl.c   bjtsset.c
bjtacld.c  bjtdest.c   bjtload.c   bjtnoise.c  bjtsetup.c  bjtsupd.c
bjtask.c   bjtdisto.c  bjtmask.c   bjtparam.c  bjtsload.c  bjttemp.c
bjtconv.c  bjtdset.c   bjtmdel.c   bjtpzld.c   bjtsprt.c   bjttrunc.c)

include_directories(${PROJECT_SOURCE_DIR}/src/include)
