add_library(ind ind.c      inddest.c   indpzld.c   indsprt.c   mutacld.c  mutmdel.c   mutsprt.c
indacld.c  indload.c   indsacl.c   indsset.c   mutask.c   mutparam.c  mutsset.c
indask.c   indmdel.c   indsetup.c  indsupd.c   mutdel.c   mutpzld.c
inddel.c   indparam.c  indsload.c  indtrunc.c  mutdest.c  mutsetup.c)

