add_library(mos1 mos1.c      mos1del.c   mos1ic.c    mos1mpar.c  mos1sacl.c  mos1sset.c
mos1acld.c  mos1dest.c  mos1load.c  mos1noi.c   mos1set.c   mos1supd.c
mos1ask.c   mos1dist.c  mos1mask.c  mos1par.c   mos1sld.c   mos1temp.c
mos1conv.c  mos1dset.c  mos1mdel.c  mos1pzld.c  mos1sprt.c  mos1trun.c)

